2003-02-15  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=big5-eten): Renamed from
	`chinese-big5-eten'.
	(chinese-big5-eten): Changed to an alias for `=big5-eten'.

2003-02-14  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (=big5-pua): Renamed from `chinese-big5-pua'.
	(chinese-big5-pua): Changed to an alias for `=big5-pua'.

2003-02-13  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=cbeta): Renamed from `ideograph-cbeta'.
	(ideograph-cbeta): Changed to an alias for `=cbeta'.

2003-02-11  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=jef-china3): Renamed from `china3-jef'.
	(china3-jef): Changed to an alias for `=jef-china3'.

2003-02-10  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list): Use
	`=jis-x0213-{1|2}-2000' instead of `japanese-jisx0213-{1|2}'.

	* mule/mule-conf.el (=jis-x0213-{1|2}-2000): Renamed from
	`japanese-jisx0213-{1|2}' when `utf-2000' is provided.
	(japanese-jisx0213-{1|2}): New alias for =jis-x0213-{1|2}-2000
	when `utf-2000' is provided.

2003-02-10  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* dumped-lisp.el (preloaded-file-list): Add
	"u02980-Miscellaneous-Mathematical-Symbols-B",
	"u02900-Supplemental-Arrows-B" and
	"u031F0-Katakana-Phonetic-Extensions" when `utf-2000' is provided.

2003-02-05  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=ucs-jis-1990): New coded-charset for
	UTF-2000.
	(=ucs-jis-2000): New coded-charset for UTF-2000.

2003-01-05  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el: Add new coded-charset when UTF-2000 [was a
	builtin coded-charset].

2002-12-18  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (ideograph-gt-k): New coded-charset in
	UTF-2000.
	(ideograph-gt-pj-k1): Likewise.
	(ideograph-gt-pj-k2): Likewise.

2002-11-29  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>